# code-for-techblogs

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: aws.yaml  azure.yaml  (+1 more)
argo_rollouts_canary/: .gitignore  README.md
argo_server_sso/: .gitignore  README.md
argo_workflows_datadog_monitoring/: .gitignore  README.md
articles/: 11de86ee2efc0a.md  d7ee500add9b2e.md
aws_chime_django_local/: .gitignore  README.md  compose.yaml  pyproject.toml
aws_chime_django_local/bundle/: package.json  webpack.config.js
aws_chime_django_local/bundle/src/: meeting.js
aws_chime_django_local/docker/: Dockerfile
aws_chime_django_local/src/: manage.py
aws_chime_django_local/src/aws_chime_django/: asgi.py  settings.py  urls.py  wsgi.py
aws_chime_django_local/src/video_meeting_app/: apps.py  models.py  urls.py  views.py
aws_chime_django_local/src/video_meeting_app/management/commands/: seed_users.py
aws_chime_django_local/src/video_meeting_app/migrations/: 0001_initial.py
aws_chime_django_local/src/video_meeting_app/static/: index.js
aws_chime_django_local/src/video_meeting_app/templates/: index.html  meeting.html
aws_ecs_canary/: .dockerignore  .gitignore  README.md  compose.yaml  go.mod
cloud_contaier_app_cicd/: .dockerignore  .gitignore  README.md  docker-compose.yaml
docker/: Dockerfile
fastapi_docker_debugger/: .dockerignore  README.md  compose.yaml  main.py  pdb_code_sample.py  pyproject.toml  vscode_sample.py
fastapi_profiling/: .dockerignore  Makefile  README.md  compose.yaml  pyproject.toml
fastapi_profiling/docker/: Dockerfile
fastapi_profiling/src/: cprofile_script.py  main.py  memray_script.py  yappi_script.py
inference_on_secure_cloud_run/: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
inference_on_secure_cloud_run/docker/: Dockerfile
inference_on_secure_cloud_run/inference/: main.py
inference_on_secure_cloud_run/inference/artifacts/: model.pkl
inference_on_secure_cloud_run/inference/schemas/: __init__.py  inference.py
inference_on_secure_cloud_run/inference/services/: model.py
inference_on_secure_cloud_run/inference/shared/: consts.py
inference_on_secure_cloud_run/infra/: modules.tf
inference_on_secure_cloud_run/requirements/: inference.txt  shared.txt  train.txt
inference_on_secure_cloud_run/train/: main.py  model.pkl  train.ipynb
k6_datadog/: .dockerignore  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
k6_datadog/docker/: Dockerfile.loadtest
k6_datadog/infra/: ar.tf  gke.tf  sa.tf
k6_datadog/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
k6_datadog/k8s/overlays/: datadog-agent.yaml  deployment.yaml  job.yaml  kustomization.yaml  serviceaccount.yaml
k6_datadog/loadtest/: main.js
k6_datadog/src/: main.py
llm_observability/: .env.example  .gitignore  README.md
local_argo_events_argo_workflows/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
local_argo_events_argo_workflows/argo-infra/argo-events/base/: install.yaml  kustomization.yaml
local_argo_events_argo_workflows/argo-infra/argo-workflows/base/: install.yaml
local_argo_events_argo_workflows/argo-infra/argo-workflows/overlays/local/: deployment.yaml  kustomization.yaml
local_argo_events_argo_workflows/argo-infra/event-bus/base/: install.yaml
local_argo_events_argo_workflows/argo-infra/event-bus/overlays/local/: kustomization.yaml
local_argo_events_argo_workflows/argo-infra/external-secret/base/: external-secret.yaml  kustomization.yaml
local_argo_events_argo_workflows/argo-infra/external-secret/overlays/local/: kustomization.yaml
local_argo_events_argo_workflows/docker/: Dockerfile
local_argo_events_argo_workflows/infra/: main.tf  variables.tf
local_argo_events_argo_workflows/requirements/: app.txt  dev.txt
local_argo_events_argo_workflows/src/models/: lgbm.py  lr.py  model.py
local_argo_events_argo_workflows/src/schemas/: schema.py
local_argo_events_argo_workflows/src/services/: evaluate.py
local_argo_events_argo_workflows/src/utils/: consts.py  gcp_controller.py
local_argo_events_argo_workflows/src/workflows/extract/: main.py
local_argo_events_argo_workflows/src/workflows/train/: main.py
local_argo_events_argo_workflows/src/workflows/transform/: main.py
local_argo_events_argo_workflows/workflows/base/: binding.yaml  external-secret.yaml  kustomization.yaml  role.yaml  serviceaccount.yaml
local_argo_events_argo_workflows/workflows/base/argo-events/: event-source.yaml  sensor.yaml
local_argo_events_argo_workflows/workflows/overlays/local/: external-secret.yaml  kustomization.yaml  run-workflow.yaml
local_argo_events_argo_workflows/workflows/overlays/local/argo-events/: event-source.yaml
local_argo_events_argo_workflows/workflows/overlays/local/argo-workflows/: extract.yaml  train.yaml  transform.yaml  workflow.yaml
pydanticai_graph/: README.md  pyproject.toml  sample1.py
pydanticai_mcp/: .env.example  .gitignore  README.md  pyproject.toml
pydanticai_mcp/client/: main.py
pydanticai_mcp/server/: client.py  main.py
pydanticai_observability/: .env.example  README.md  pyproject.toml
pydanticai_observability/samples/: run_agent.py
pydanticai_observability/src/: main.py
redash_text_to_sql/: .gitignore  README.md  compose.yaml
whisper_grpc_server/: .dockerignore  .gitignore  README.md  compose.yaml  pyproject.toml
whisper_grpc_server/clients/: request.py
whisper_grpc_server/clients/proto/: inference_pb2.py  inference_pb2_grpc.py
whisper_grpc_server/docker/: Dockerfile
whisper_grpc_server/proto/: codegen.py  inference.proto
whisper_grpc_server/src/: main.py
whisper_grpc_server/src/models/: __init__.py  base_asr_model.py  faster_distil_whisper_large_v2_model.py  faster_distil_whisper_large_v3_model.py  faster_whisper_large_v2_model.py  faster_whisper_large_v3_model.py  model_info.py
whisper_grpc_server/src/proto/: inference_pb2.pyi  inference_pb2_grpc.py
whisper_grpc_server/src/services/: inference_server.py
whisper_grpc_server/src/utils/: consts.py  enums.py  logging.py
(+65 files in other folders)
