[project]
name = "aws-chime-django-local"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hosimesi", email = "hosimesi11@gmail.com" }
]
dependencies = [
    "mysqlclient>=2.2.4",
    "django>=5.0.7",
    "boto3>=1.34.149",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aws_chime_django_local"]
