[project]
name = "fastapi-profiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
app = [
    "fastapi>=0.115.5",
    "matplotlib>=3.9.3",
    "pydantic>=2.10.2",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "uvicorn>=0.32.1",
]
dev = [
    "memray>=1.14.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.1",
    "tox>=4.23.2",
    "memory-profiler>=0.61.0",
    "py-spy>=0.4.0",
    "yappi>=1.6.10",
    "scalene>=1.5.48",
    "aiomonitor>=0.7.1",
]
