[project]
name = "k6-datadog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
app = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.3",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "uvicorn>=0.32.1",
]
