[project]
name = "pydanticai-observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "pydantic-ai-slim[duckduckgo]>=0.1.6",
    "pydantic-ai[duckduckgo,logfire]>=0.1.6",
    "python-dotenv>=1.1.0",
]
